changes to the styles

--- a/src/App.css
+++ b/src/App.css
@@ -202,9 +202,9 @@ h3 {
 }
 
 .btn:hover {
-  /* background-color: #FFDF78;
+  background-color: #FFDF78;
   color: #1C2F36;
-  transition: 1s; */
+  transition: 1s;
 }
 
 .error-btn {
