changes to the style

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   justify-content: center;
   /* background: rgb(36, 46, 133); */
   padding: 0.5rem;
+  margin-top: 3rem;
 }
 .menu {
   list-style: none;
